--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,11 @@
 	    <version>2.8.6</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+
 	<dependency>
-	    <groupId>org.apache.httpcomponents</groupId>
-	    <artifactId>httpclient</artifactId>
-	    <version>4.5.12</version>
+	  <groupId>com.squareup.okhttp3</groupId>
+	  <artifactId>okhttp</artifactId>
+	  <version>4.8.1</version>
 	</dependency>
   </dependencies>
 </project>
