--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   <description>An basic API to consume my own API REST.</description>
   <packaging>jar</packaging>
   <properties>
-  	<java.version>11</java.version>
-  	<maven.compiler.source>11</maven.compiler.source>
-   <maven.compiler.target>11</maven.compiler.target>
+  	<java.version>1.8</java.version>
+  	<maven.compiler.source>8</maven.compiler.source>
+   <maven.compiler.target>8</maven.compiler.target>
   </properties>
   
   <developers>
@@ -31,6 +31,11 @@
   		<plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-dependency-plugin</artifactId>
+		    <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <encoding>UTF-8</encoding>
+            </configuration>
 		    <executions>
 		        <execution>
 		            <id>copy-dependencies</id>
@@ -39,6 +44,9 @@
 		                <goal>copy-dependencies</goal>
 		            </goals>
 		            <configuration>
+				        <source>1.8</source>
+		                <target>1.8</target>
+		                <encoding>UTF-8</encoding>
 		                <outputDirectory>
 		                    ${project.build.directory}/libs
 		                </outputDirectory>
@@ -49,10 +57,14 @@
 		<plugin>
 	        <artifactId>maven-assembly-plugin</artifactId>
 	        <version>2.1</version>
+	        
 	        <configuration>
 	            <descriptorRefs>
 	                <descriptorRef>jar-with-dependencies</descriptorRef>
-	            </descriptorRefs>                 
+	            </descriptorRefs>     
+                <source>1.8</source>
+                <target>1.8</target>
+                <encoding>UTF-8</encoding>        
 	        </configuration>
 	        <executions>
 	            <execution>
@@ -67,6 +79,11 @@
 		<plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
 	        <artifactId>maven-jar-plugin</artifactId>
+	        <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <encoding>UTF-8</encoding>
+            </configuration>
 	        <version>3.2.0</version>
 	        <executions>
 	          <execution>
